--- a/package.json
+++ b/package.json
@@ -1,63 +1,73 @@
 {
-  "name": "pink-koala",
-  "version": "1.0.0",
-  "description": "react for html canvas",
-  "author": "BrianBal",
-  "license": "MIT",
-  "repository": "BrianBal/pink-koala",
-  "main": "dist/index.js",
-  "module": "dist/index.modern.js",
-  "source": "src/index.tsx",
-  "engines": {
-    "node": ">=10"
-  },
-  "scripts": {
-    "build": "microbundle-crl --no-compress --format modern,cjs",
-    "start": "microbundle-crl watch --no-compress --format modern,cjs",
-    "prepare": "run-s build",
-    "test": "run-s test:unit test:lint test:build",
-    "test:build": "run-s build",
-    "test:lint": "eslint .",
-    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:watch": "react-scripts test --env=jsdom",
-    "predeploy": "cd example && yarn install && yarn run build",
-    "deploy": "gh-pages -d example/build"
-  },
-  "peerDependencies": {
-    "react": "^16.0.0"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^12.12.38",
-    "@types/react": "^16.9.27",
-    "@types/react-dom": "^16.9.7",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "microbundle-crl": "^0.13.10",
-    "babel-eslint": "^10.0.3",
-    "cross-env": "^7.0.2",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-config-standard-react": "^9.2.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "gh-pages": "^2.2.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1",
-    "typescript": "^3.7.5"
-  },
-  "files": [
-    "dist"
-  ]
+    "name": "pink-koala",
+    "version": "1.0.0",
+    "description": "react for html canvas",
+    "author": "BrianBal",
+    "license": "MIT",
+    "repository": "BrianBal/pink-koala",
+    "main": "dist/index.js",
+    "module": "dist/index.modern.js",
+    "source": "src/index.ts",
+    "engines": {
+        "node": ">=10"
+    },
+    "scripts": {
+        "build": "run-s build-src copy-dts",
+        "build-src": "rm -rf ./dist && microbundle-crl --no-compress --format modern,cjs",
+        "build-global": "microbundle-crl ./src/global.d.ts --no-compress --format modern,cjs",
+        "start": "microbundle-crl watch --no-compress --format modern,cjs",
+        "prepare": "run-s build",
+        "test": "run-s test:unit test:build",
+        "test:build": "run-s build",
+        "test:unit": "cross-env CI=1 react-scripts test --env=jsdom --colors",
+        "test:watch": "react-scripts test --env=jsdom",
+        "predeploy": "cd example && yarn install && yarn run build",
+        "deploy": "gh-pages -d example/build",
+        "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" dist"
+    },
+    "peerDependencies": {
+        "react": "^16.0.0"
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^5.16.2",
+        "@testing-library/react": "^9.5.0",
+        "@testing-library/user-event": "^7.2.1",
+        "@types/jest": "^25.1.4",
+        "@types/node": "^12.12.38",
+        "@types/react": "^16.9.27",
+        "@types/react-dom": "^16.9.7",
+        "@typescript-eslint/eslint-plugin": "^5.13.0",
+        "@typescript-eslint/parser": "^5.13.0",
+        "babel-eslint": "^10.0.3",
+        "copyfiles": "^2.4.1",
+        "cross-env": "^7.0.2",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-airbnb-typescript": "^16.1.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-config-standard": "^14.1.0",
+        "eslint-config-standard-react": "^9.2.0",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-node": "^11.0.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-react": "^7.29.3",
+        "eslint-plugin-react-hooks": "^4.3.0",
+        "eslint-plugin-standard": "^4.0.1",
+        "gh-pages": "^2.2.0",
+        "microbundle-crl": "^0.13.10",
+        "npm-run-all": "^4.1.5",
+        "prettier": "^2.0.4",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-scripts": "^3.4.1",
+        "typescript": "^4.6.2"
+    },
+    "files": [
+        "dist"
+    ],
+    "dependencies": {
+        "@types/requestidlecallback": "^0.3.4",
+        "jest-canvas-mock": "^2.3.1"
+    }
 }
