--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
         "node": ">=10"
     },
     "scripts": {
-        "build": "run-s build-src copy-dts",
+        "build": "echo \"building pk\" && run-s build-src copy-dts",
         "build-src": "rm -rf ./dist && microbundle-crl --no-compress --format modern,cjs",
         "build-global": "microbundle-crl ./src/global.d.ts --no-compress --format modern,cjs",
         "start": "microbundle-crl watch --no-compress --format modern,cjs",
-        "prepare": "run-s build",
+        "prepare": "echo \"preparing pk\" &&run-s build",
         "test": "run-s test:unit test:build",
         "test:build": "run-s build",
         "test:unit": "cross-env CI=1 react-scripts test --env=jsdom --colors",
