--- a/package.json
+++ b/package.json
@@ -12,18 +12,16 @@
         "node": ">=10"
     },
     "scripts": {
-        "build": "echo \"building pk\" && run-s build-src copy-dts",
+        "build": "yarn build-src",
         "build-src": "rm -rf ./dist && microbundle-crl --no-compress --format modern,cjs",
-        "build-global": "microbundle-crl ./src/global.d.ts --no-compress --format modern,cjs",
         "start": "microbundle-crl watch --no-compress --format modern,cjs",
-        "prepare": "echo \"preparing pk\" &&run-s build",
+        "prepare": "yarn build",
         "test": "run-s test:unit test:build",
         "test:build": "run-s build",
         "test:unit": "cross-env CI=1 react-scripts test --env=jsdom --colors",
         "test:watch": "react-scripts test --env=jsdom",
         "predeploy": "cd example && yarn install && yarn run build",
-        "deploy": "gh-pages -d example/build",
-        "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" dist"
+        "deploy": "gh-pages -d example/build"
     },
     "peerDependencies": {
         "react": "^16.0.0"
