--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "build-src": "rm -rf ./dist && microbundle-crl --no-compress --format modern,cjs",
         "start": "microbundle-crl watch --no-compress --format modern,cjs",
         "prepare": "yarn build",
+        "prepack": "yarn build",
         "test": "run-s test:unit test:build",
         "test:build": "run-s build",
         "test:unit": "cross-env CI=1 react-scripts test --env=jsdom --colors",
