--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "repository": "BrianBal/pink-koala",
     "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "module": "dist/index.modern.js",
     "source": "src/index.ts",
     "engines": {
@@ -16,7 +17,6 @@
         "build-src": "rm -rf ./dist && microbundle-crl --no-compress --format modern,cjs",
         "start": "microbundle-crl watch --no-compress --format modern,cjs",
         "prepare": "yarn build",
-        "prepack": "yarn build",
         "test": "run-s test:unit test:build",
         "test:build": "run-s build",
         "test:unit": "cross-env CI=1 react-scripts test --env=jsdom --colors",
