--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     },
     "scripts": {
         "build": "yarn build-src",
-        "build-src": "rm -rf ./dist && microbundle-crl --no-compress --format modern,cjs",
-        "start": "microbundle-crl watch --no-compress --format modern,cjs",
+        "build-src": "rm -rf ./dist && microbundle-crl --no-compress --no-css-modules --format modern,cjs",
+        "start": "microbundle-crl watch --no-compress --no-css-modules --format modern,cjs",
         "prepare": "yarn build",
         "test": "run-s test:unit test:build",
         "test:build": "run-s build",
