--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
         "noUnusedLocals": false,
         "noUnusedParameters": false,
         "allowSyntheticDefaultImports": true,
-        "target": "es2021",
+        "target": "ES2020",
         "allowJs": true,
         "skipLibCheck": true,
         "strict": true,
